tweak styling to stop date wrapping

--- a/source/stylesheets/tailwind.css
+++ b/source/stylesheets/tailwind.css
@@ -1135,6 +1135,10 @@ video {
   margin-right: auto;
 }
 
+.-mb-4{
+  margin-bottom: -1rem;
+}
+
 .-mt-10{
   margin-top: -2.5rem;
 }
@@ -1195,9 +1199,9 @@ video {
   display: none;
 }
 
-.size-6{
-  width: 1.5rem;
-  height: 1.5rem;
+.size-5{
+  width: 1.25rem;
+  height: 1.25rem;
 }
 
 .h-auto{
@@ -1245,6 +1249,14 @@ video {
 .w-max{
   width: -moz-max-content;
   width: max-content;
+}
+
+.w-16{
+  width: 4rem;
+}
+
+.w-20{
+  width: 5rem;
 }
 
 .min-w-72{
@@ -1312,6 +1324,10 @@ video {
   flex-direction: column;
 }
 
+.items-center{
+  align-items: center;
+}
+
 .justify-center{
   justify-content: center;
 }
@@ -1355,8 +1371,20 @@ video {
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 
+.text-nowrap{
+  text-wrap: nowrap;
+}
+
 .rounded{
   border-radius: 0.25rem;
+}
+
+.rounded-full{
+  border-radius: 9999px;
+}
+
+.rounded-lg{
+  border-radius: 0.5rem;
 }
 
 .rounded-md{
@@ -1442,16 +1470,12 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-stone-50\/50{
-  background-color: rgb(250 250 249 / 0.5);
+.p-0{
+  padding: 0px;
 }
 
-.bg-stone-50\/75{
-  background-color: rgb(250 250 249 / 0.75);
-}
-
-.bg-stone-50\/80{
-  background-color: rgb(250 250 249 / 0.8);
+.p-0\.5{
+  padding: 0.125rem;
 }
 
 .p-2{
@@ -1508,6 +1532,10 @@ video {
   padding-top: 2rem;
 }
 
+.pl-2{
+  padding-left: 0.5rem;
+}
+
 .text-left{
   text-align: left;
 }
@@ -1533,6 +1561,11 @@ video {
   line-height: 2.5rem;
 }
 
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
+}
+
 .text-9xl{
   font-size: 8rem;
   line-height: 1;
@@ -1543,22 +1576,8 @@ video {
   line-height: 1.25rem;
 }
 
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
-.text-5xl{
-  font-size: 3rem;
-  line-height: 1;
-}
-
 .font-bold{
   font-weight: 700;
-}
-
-.font-light{
-  font-weight: 300;
 }
 
 .font-medium{
@@ -1846,13 +1865,13 @@ a:hover{
   content: var(--tw-content);
 }
 
-.after\:content-none::after{
-  --tw-content: none;
+.after\:content-\[\'_\2197\'\]::after{
+  --tw-content: ' ↗';
   content: var(--tw-content);
 }
 
-.\*\:after\:content-\[\'_\2197\'\] > *::after{
-  --tw-content: ' ↗';
+.after\:content-none::after{
+  --tw-content: none;
   content: var(--tw-content);
 }
 
@@ -1860,9 +1879,19 @@ a:hover{
   border-style: none;
 }
 
+.open\:bg-stone-100[open]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 244 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-stone-100:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(245 245 244 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-stone-200:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(231 229 228 / var(--tw-bg-opacity));
 }
 
 .hover\:text-yellow-500:hover{
@@ -1875,16 +1904,6 @@ a:hover{
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.hover\:content-\[\'\2606\'\]:hover{
-  --tw-content: '☆';
-  content: var(--tw-content);
-}
-
-.hover\:content-\[\'\2605\'\]:hover{
-  --tw-content: '★';
-  content: var(--tw-content);
-}
-
 .focus\:outline-none:focus{
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -1893,11 +1912,6 @@ a:hover{
 .peer:hover ~ .peer-hover\:text-yellow-500{
   --tw-text-opacity: 1;
   color: rgb(234 179 8 / var(--tw-text-opacity));
-}
-
-.peer:hover ~ .peer-hover\:content-\[\'\2606\'\]{
-  --tw-content: '☆';
-  content: var(--tw-content);
 }
 
 @media (min-width: 640px){
@@ -1963,23 +1977,8 @@ a:hover{
   background-color: rgb(68 64 60 / var(--tw-bg-opacity));
 }
 
-.\[\&\>\*\]\:cursor-pointer>*{
-  cursor: pointer;
-}
-
 .\[\&\>\*\]\:no-underline>*{
   text-decoration-line: none;
-}
-
-.\[\&\>\*\]\:transition-all>*{
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.\[\&\>\*\]\:after\:content-\[\'_\2197\'\]>*::after{
-  --tw-content: ' ↗';
-  content: var(--tw-content);
 }
 
 .\[\&\>\*\]\:after\:content-\[\'\'\]>*::after{
@@ -1987,16 +1986,7 @@ a:hover{
   content: var(--tw-content);
 }
 
-.\[\&\>\*\]\:hover\:text-yellow-500:hover>*{
-  --tw-text-opacity: 1;
-  color: rgb(234 179 8 / var(--tw-text-opacity));
-}
-
-.peer:hover ~ .peer-hover\:\[\&\>\*\]\:fill-yellow-500>*{
-  fill: #eab308;
-}
-
-.peer:hover ~ .\[\&\>\*\]\:peer-hover\:text-yellow-500>*{
-  --tw-text-opacity: 1;
-  color: rgb(234 179 8 / var(--tw-text-opacity));
+.\[\&_svg\]\:open\:-rotate-180[open] svg{
+  --tw-rotate: -180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
